Bug 15818 - objdump does not work with /proc/kcore
Summary: objdump does not work with /proc/kcore
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: binutils (show other bugs)
Version: 2.22
: P2 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-06 09:52 UTC by phasetempsec
Modified: 2013-08-12 07:58 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description phasetempsec 2013-08-06 09:52:38 UTC

    
Comment 1 phasetempsec 2013-08-06 10:00:38 UTC
$ sudo cat /proc/kallsyms | grep " snd_request_card"
ffffffffa03df520 T snd_request_card	[snd]
$ sudo objdump -d --start-address=0xffffffffa03df520 --stop-address=0xffffffffa03df620 /proc/kcore 

/proc/kcore:     file format elf64-x86-64


objdump: out of memory allocating 35184372088831 bytes after a total of 0 bytes
Comment 2 Sourceware Commits 2013-08-12 07:55:57 UTC
CVSROOT:	/cvs/src
Module name:	src
Changes by:	schwab@sourceware.org	2013-08-12 07:55:55

Modified files:
	binutils       : ChangeLog objdump.c 

Log message:
	PR binutils/15818
	* objdump.c (disassemble_section): Return early if nothing from
	this section needs to be disassembled.

Patches:
http://sourceware.org/cgi-bin/cvsweb.cgi/src/binutils/ChangeLog.diff?cvsroot=src&r1=1.2028&r2=1.2029
http://sourceware.org/cgi-bin/cvsweb.cgi/src/binutils/objdump.c.diff?cvsroot=src&r1=1.201&r2=1.202
Comment 3 Andreas Schwab 2013-08-12 07:58:28 UTC
Fixed for 2.24.