PR binutils/15818 * objdump.c (disassemble_section): Return early if nothing from this section needs to be disassembled.